JsonViewer works in AST tab

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -10,6 +10,6 @@
     <base target="_blank" />
 </head>
 <body>
-<div id="elmish-app" class="d-flex flex-column vh-100"></div>
+<div id="elmish-app"></div>
 </body>
 </html>
