--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Fantomas Tools</title>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/png" href="https://nojaf.com/fantomas-tools/fantomas_logo.png">
+    <link rel="shortcut icon" type="image/png" href="https://fsprojects.github.io//fantomas-tools/fantomas_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/aadbaa5e13.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
