--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -10,7 +10,7 @@
     <title>Fantomas Tools</title>
   </head>
   <body>
-    <div id="elmish-app"></div>
+    <div id="app"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/_dist_/index.js"></script>
     <!--
