--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/png" href="https://fsprojects.github.io//fantomas-tools/fantomas_logo.png">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/fantomas_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/aadbaa5e13.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -12,7 +12,7 @@
   <body>
     <div id="app"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="/_dist_/index.js"></script>
+    <script type="module" src="%PUBLIC_URL%/_dist_/index.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
