--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/png" href="/fantomas_logo.png">
+    <link rel="shortcut icon" type="image/png" href="/fantomas-tools/fantomas_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/aadbaa5e13.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <meta name="description" content="Tools useful when working on Fantomas" />
     <title>Fantomas Tools</title>
-  <script type="module" crossorigin src="/assets/index.7da2e8c8.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.01e990b5.js">
-  <link rel="stylesheet" href="/assets/index.f5ea7f46.css">
+  <script type="module" crossorigin src="/fantomas-tools/assets/index.7da2e8c8.js"></script>
+  <link rel="modulepreload" href="/fantomas-tools/assets/vendor.01e990b5.js">
+  <link rel="stylesheet" href="/fantomas-tools/assets/index.f5ea7f46.css">
 </head>
   <body>
     <div id="app"></div>
