--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <link rel="shortcut icon" type="image/png" href="/fantomas-tools/fantomas_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/aadbaa5e13.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&family=Reem+Kufi:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="description" content="Tools useful when working on Fantomas" />
     <title>Fantomas Tools</title>
-    <script type="module" crossorigin src="/fantomas-tools/assets/index.5aca824e.js"></script>
-    <link rel="stylesheet" href="/fantomas-tools/assets/index.c2a22b59.css">
+    <script type="module" crossorigin src="/fantomas-tools/assets/index.74e5c262.js"></script>
+    <link rel="stylesheet" href="/fantomas-tools/assets/index.382e8837.css">
   </head>
   <body>
     <div id="app"></div>
